--- a/frontend/src/app/app.html
+++ b/frontend/src/app/app.html
@@ -183,6 +183,7 @@
 <main class="main">
   <div class="content">
     <div class="left-side">
+      <div class="text-primary text-6xl">Hello world!</div>
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 982 239"
