--- a/frontend/src/app/pages/dashboard/navbar/navbar.html
+++ b/frontend/src/app/pages/dashboard/navbar/navbar.html
@@ -1,5 +1,7 @@
 <nav
-  class="bg-gray-900 text-white w-64 min-h-screen fixed left-0 top-0 overflow-y-auto z-50 transform lg:translate-x-0 -translate-x-full transition-transform duration-300 ease-in-out"
+  class="bg-gray-900 text-white w-64 min-h-screen fixed left-0 top-0 overflow-y-auto z-50 transform lg:translate-x-0 transition-transform duration-300 ease-in-out"
+  [class.-translate-x-full]="!isOpen"
+  [class.translate-x-0]="isOpen"
   id="sidebar"
 >
   <!-- Logo/Brand -->
